<resources>
    <string name="app_name">Decide For Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="lists">Lists</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="call">Call</string>
    <string name="delete">X</string>
    <string name="choose_for_me">Decide For Me</string>
    <string name="add_list_item">Add Item</string>
    <string name="add_list">Create New List</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="website">Website</string>
    <string name="web">Web</string>
    <string name="additional_fields">Additional Fields</string>
    <string name="import_list">Import List</string>
    <string name="send_list">Send  List</string>
</resources>
