<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_to_lists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lists" />

        <Button
            android:id="@+id/add_list_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_list_item" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview_list_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/selection_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/result_background">

        <TextView
            android:id="@+id/selection_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/call_selection"
            android:layout_width="62dp"
            android:layout_height="40dp"
            android:text="@string/call"/>

        <Button
            android:id="@+id/web_selection"
            android:layout_width="62dp"
            android:layout_height="40dp"
            android:text="@string/web"/>

        <Button
            android:id="@+id/hide_selection"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/delete"
            android:padding="0dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/make_selection"
        android:text="@string/choose_for_me"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/btn_green"
        style="@style/ButtonText"/>

</LinearLayout>